--- a/app/ngsw-config.json
+++ b/app/ngsw-config.json
@@ -3,7 +3,7 @@
   "index": "/index.html",
   "assetGroups": [
     {
-      "name": "Techsessions demo",
+      "name": "Aquele Chat",
       "installMode": "prefetch",
       "resources": {
         "files": [
