--- a/app/package.json
+++ b/app/package.json
@@ -13,34 +13,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~9.1.6",
-    "@angular/core": "~9.1.6",
-    "@angular/forms": "~9.1.6",
-    "@angular/platform-browser": "~9.1.6",
-    "@angular/platform-browser-dynamic": "~9.1.6",
-    "@angular/router": "~9.1.6",
-    "@angular/service-worker": "~9.1.6",
-    "@ionic-native/core": "^5.0.7",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.0",
-    "@zxing/ngx-scanner": "^3.0.0",
-    "angularx-qrcode": "^2.1.1",
-    "ngx-socket-io": "^3.0.1",
-    "rxjs": "~6.5.1",
-    "tslib": "^1.10.0",
+    "@angular/common": "^10.2.0",
+    "@angular/core": "^10.2.0",
+    "@angular/forms": "^10.2.0",
+    "@angular/platform-browser": "^10.2.0",
+    "@angular/platform-browser-dynamic": "^10.2.0",
+    "@angular/router": "^10.2.0",
+    "@angular/service-worker": "^10.2.0",
+    "@ionic/angular": "^5.4.1",
+    "@zxing/ngx-scanner": "^2.0.1",
+    "angularx-qrcode": "^2.3.5",
+    "ngx-socket-io": "^3.2.0",
+    "rxjs": "~6.6.3",
+    "tslib": "^1.14.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.5",
-    "@angular/cli": "~9.1.5",
-    "@angular/compiler": "~9.1.6",
-    "@angular/compiler-cli": "~9.1.6",
-    "@angular/language-service": "~9.1.6",
-    "@ionic/angular-toolkit": "^2.1.1",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "^0.1002.0",
+    "@angular/cli": "^10.1.7",
+    "@angular/compiler": "^10.2.0",
+    "@angular/compiler-cli": "^10.2.0",
+    "@angular/language-service": "^10.2.0",
+    "@ionic/angular-toolkit": "^2.3.3",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.19.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -49,10 +46,10 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~4.0.3"
   },
   "description": "An Ionic project"
 }
