--- a/app/ngsw-config.json
+++ b/app/ngsw-config.json
@@ -3,7 +3,7 @@
   "index": "/index.html",
   "assetGroups": [
     {
-      "name": "Aquele Chat",
+      "name": "aquele-chat",
       "installMode": "prefetch",
       "resources": {
         "files": [
@@ -14,7 +14,8 @@
           "/*.js"
         ]
       }
-    }, {
+    },
+    {
       "name": "assets",
       "installMode": "lazy",
       "updateMode": "prefetch",
