--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "app",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "name": "aquele-chat",
+  "version": "1.0.0",
+  "author": "Luís Cunha",
+  "homepage": "http://luiscunha.tech/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -13,43 +13,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^10.2.0",
-    "@angular/core": "^10.2.0",
-    "@angular/forms": "^10.2.0",
-    "@angular/platform-browser": "^10.2.0",
-    "@angular/platform-browser-dynamic": "^10.2.0",
-    "@angular/router": "^10.2.0",
-    "@angular/service-worker": "^10.2.0",
+    "@angular/common": "^12.2.6",
+    "@angular/core": "^12.2.6",
+    "@angular/forms": "^12.2.6",
+    "@angular/platform-browser": "^12.2.6",
+    "@angular/platform-browser-dynamic": "^12.2.6",
+    "@angular/router": "^12.2.6",
+    "@angular/service-worker": "^12.2.6",
     "@ionic/angular": "^5.4.1",
-    "@zxing/ngx-scanner": "^2.0.1",
-    "angularx-qrcode": "^2.3.5",
+    "@zxing/browser": "0.0.9",
+    "@zxing/library": "^0.18.6",
+    "@zxing/ngx-scanner": "^3.2.0",
+    "angularx-qrcode": "^11.0.0",
     "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.6.3",
-    "tslib": "^1.14.1",
-    "zone.js": "~0.10.2"
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.0",
-    "@angular/cli": "^10.1.7",
-    "@angular/compiler": "^10.2.0",
-    "@angular/compiler-cli": "^10.2.0",
-    "@angular/language-service": "^10.2.0",
+    "@angular-devkit/build-angular": "^12.2.6",
+    "@angular/cli": "^12.2.6",
+    "@angular/compiler": "^12.2.6",
+    "@angular/compiler-cli": "^12.2.6",
+    "@angular/language-service": "^12.2.6",
     "@ionic/angular-toolkit": "^2.3.3",
-    "@types/jasmine": "^3.5.14",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.19.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~5.0.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.3"
+    "typescript": "~4.3.5"
   },
-  "description": "An Ionic project"
+  "description": "Techsessions real time communication demo"
 }
