--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -10,7 +10,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2018",
+    "target": "esnext",
     "lib": [
       "es2018",
       "dom"
